docs: add compact JRE build steps